# ToxicCommentClassification

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: .gitignore  config
configs/: config.yaml  export.yaml
configs/data/: data.yaml
configs/infer/: infer.yaml
configs/logging/: logging.yaml
configs/model/: model.yaml
configs/preprocess/: preprocess.yaml
configs/train/: train.yaml
data/raw/: crawl-300d-2M.vec.dvc  train.csv.dvc
jigsaw_toxic_classification_ml/: commands.py
jigsaw_toxic_classification_ml/data/: download.py  dvc_utils.py  embeddings.py  io.py  preprocess.py  schema.py
jigsaw_toxic_classification_ml/models/: baseline_tfidf.py  toxic_classifier.py
jigsaw_toxic_classification_ml/production/: export_onnx.py  infer_onnx.py  mlflow_pyfunc.py  trt_export.sh
jigsaw_toxic_classification_ml/training/: datamodule.py  metrics.py  train.py
jigsaw_toxic_classification_ml/utils/: git.py  logging.py  paths.py  seeding.py
lightning_logs/version_1/: metrics.csv
scripts/: self_check.sh
tests/: test_config_loads.py  test_infer_schema.py  test_preprocess_synthetic.py
